--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,43 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito:wght@600&family=Otomanopee+One&display=swap');
+
+
+body ,html{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', 'Nunito','Otomanopee One' !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.flex-container{
+  display: flex !important;
+}
+
+.btn{
+  background-color: red !important;
+  color: white !important;
+}
+
+select{
+  box-shadow: none !important;
+  border-color: black !important;
+}
+
+.login{
+  /* background-image: url('./images/png1.svg') !important; */
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  height: 84vh;
+}
+
+.register{
+  /* background-image: url('./images/bg2.svg') !important; */
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  height: 84vh;
 }
