--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,15 @@ code {
     monospace;
 }
 
+.nav-link{
+  color: black !important;
+}
+
+.navbar-brand{
+  color: black !important;
+  font-weight: bold ;
+}
+
 .flex-container{
   display: flex !important;
 }
